footer mobile version was created

--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -1,211 +1,3 @@
 .nav {
-  position: absolute;
-  top: -300px;
-  visibility: hidden;
-  transition: all 1s;
-  &__list {
-    position: relative;
-    background-color: rgba($color: #ffe, $alpha: 0.9);
-    display: flex;
-    list-style: none;
-    max-width: $phone-width;
-    height: 92vw;
-    z-index: 0;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-  }
-
-  &__item {
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-
-  &__link {
-    margin: 0 10% 0 30%;
-    width: 200px;
-    height: 26px;
-    font-family: Oswald, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    text-align: center;
-    color: #0f0e08;
-    border: solid #000 2px;
-    transition: all 0.3s;
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: rgba($color: #ffe, $alpha: 0.4);
-      border: solid black 2px;
-      color: #000;
-    }
-  }
-}
-
-@media screen and (min-width:768px) {
-  .nav {
-    position: absolute;
-    top: -32px;
-    visibility: hidden;
-    transition: all 1s;
-    &__list {
-      position: relative;
-      background-color: rgba($color: #ffe, $alpha: 0.9);
-      display: grid;
-      grid-template-columns: repeat(8, auto);
-      column-gap: 25px;
-      list-style: none;
-      max-width: $tablet-width;
-      height: 32px;
-      z-index: 0;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-end;
-    }
-
-    &__item {
-      width: auto;
-      display: flex;
-      align-items: flex-end;
-    }
-
-    &__link {
-      margin: 0;
-      width: auto;
-      height: 30px;
-      font-family: Oswald, sans-serif;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 24px;
-      text-align: center;
-      color: #0f0e08;
-      border: solid transparent 2px;
-      transition: all 0.3s;
-      &:hover,
-      &:focus,
-      &:active {
-        background-color: rgba($color: #ffe, $alpha: 0.4);
-        color: #000;
-        border-color: black;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .nav {
-    position: absolute;
-    top: 75px;
-    left: -250px;
-    visibility: hidden;
-    transition: all 1s;
-    &__list {
-      position: relative;
-      background-color: rgba($color: #fff, $alpha: 0.9);
-      display: grid;
-      grid-template-rows: repeat(8, auto);
-      grid-template-columns: auto;
-      row-gap: 25px;
-      column-gap: 0;
-      list-style: none;
-      width: 245px;
-      height: 32px * 8 + 25px *7 ;
-      z-index: 0;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-end;
-    }
-
-    &__item {
-      width: auto;
-      display: flex;
-      align-items: center;
-    }
-
-    &__link {
-      display: flex;
-      align-items: center;
-      padding: 5px;
-      margin: 0;
-      width: auto;
-      height: 30px;
-      font-family: Oswald, sans-serif;
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 24px;
-      text-align: center;
-      color: #0f0e08;
-      border: solid transparent 2px;
-      transition: all 0.3s;
-      &:hover,
-      &:focus,
-      &:active {
-        background-color: rgba($color: #ffe, $alpha: 0.4);
-        color: #000;
-        border-color: black;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .nav {
-    position: absolute;
-    top: 75px;
-    left: -18vw;
-    visibility: hidden;
-    transition: all 1s;
-    &__list {
-      position: relative;
-      background-color: rgba($color: #fff, $alpha: 0.9);
-      display: grid;
-      grid-template-rows: repeat(8, auto);
-      grid-template-columns: auto;
-      row-gap: 30px;
-      column-gap: 0;
-      list-style: none;
-      width: 18vw;
-      height: 40px * 8 + 30px *7 ;
-      z-index: 0;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-end;
-    }
-
-    &__item {
-      width: auto;
-      display: flex;
-      align-items: center;
-    }
-
-    &__link {
-      display: flex;
-      align-items: center;
-      padding: 20px 0;
-      margin: 0;
-      width: auto;
-      height: 30px;
-      font-family: Oswald, sans-serif;
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 24px;
-      text-align: center;
-      color: #0f0e08;
-      border: solid transparent 2px;
-      transition: all 0.3s;
-      &:hover,
-      &:focus,
-      &:active {
-        background-color: rgba($color: #ffe, $alpha: 0.4);
-        color: #000;
-        border-color: black;
-      }
-    }
-  }
+  position: static;
 }
