mobile footer was improved

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -1,10 +1,10 @@
 .footer {
   display: grid;
   height: 100vh;/////////////test-version
-  column-gap: 22px;
+  column-gap: 6.87vw;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 72px /*486px*/ auto 157px; //////test-version
-  padding: 50px 20px;
+  padding: 50px 6.25vw;
 
   color: #0f0e08;
 
@@ -18,7 +18,7 @@
   }
 
   &__socials {
-    width: 57px;
+    width: 17.8vw;
     display: flex;
     justify-content: space-between;
   }
@@ -27,10 +27,10 @@
     margin: 40px 0 20px;
 
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 4.37vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 6.25vw;
     text-align: left;
   }
 
@@ -40,28 +40,28 @@
 
   &__timtable-item {
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 4.37vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 6.56vw;
     text-align: left;
 
     &--bold {
       font-family: "IBM Plex Sans", sans-serif;
-      font-size: 14px;
+      font-size: 4.37vw;
       font-style: normal;
       font-weight: 600;
-      line-height: 21px;
+      line-height: 6.56vw;
       text-align: left;
     }
   }
 
   &__text {
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 4.37vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 6.56vw;
     text-align: left;
 
     margin-bottom: 70px;
@@ -76,7 +76,7 @@
     &::before {
       display: block;
       content: "";
-      border-bottom: 1px solid rgba(26, 90, 76, 0.5);
+      border-bottom: 0.3vw solid rgba(26, 90, 76, 0.5);
       position: relative;
       top: -40px;
     }
@@ -89,16 +89,22 @@
     flex-direction: column;
     flex-wrap: wrap;
 
-    height: 116px;
+    height: 36.25vw + 3.12vw * 4;
+  }
+
+  &__nav-item {
+    padding: 3.12vw 0;
   }
 
   &__nav-link {
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 4.37vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 4.37vw;
     text-align: left;
     color: #0f0e08;
+
+    padding: 3.12vw 5vw 3.12vw 0;
   }
 }
