Added content in header

--- a/src/styles/section/gallery/gallery.scss
+++ b/src/styles/section/gallery/gallery.scss
@@ -1,19 +1,22 @@
-.gallery__picture {
-  &__important {
-    display: flex;
-    justify-content: center;
-    max-height: 100%;
-    flex: 0 0 40%;
+.gallery {
+  &__picture {
+    &__important {
+      display: flex;
+      justify-content: center;
+      max-height: 100%;
+      flex: 0 0 40%;
 
-    margin-bottom: 30px;
+      margin-bottom: 30px;
+    }
+
+    &__secondary {
+      display: flex;
+      flex: 0 0 40%;
+
+      justify-content: center;
+    }
   }
 
-  &__secondary {
-    display: flex;
-    flex: 0 0 40%;
-
-    justify-content: center;
-  }
 }
 
 .important__img {
