--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -22,6 +22,12 @@
   }
 }
 
+@mixin forHeader {
+  @media (max-width: 760px) {
+    @content;
+  }
+}
+
 @mixin onMobileMax {
   @media (max-width: 640px) {
     @content;
