--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,13 +4,14 @@
 @import "utils/animation/animation";
 
 @import "header/header";
+@import "header/left";
+@import "header/right";
 
 @import "continner";
 
 @import "section/text";
 @import "section/current-events/return";
 @import "section/current-events/dreams";
-@import "section/current-events/current__events";
 
 @import "section/insert/insert__transition";
 
