footer 768px was created, nav has been broken

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -108,3 +108,134 @@
     padding: 3.12vw 5vw 3.12vw 0;
   }
 }
+
+@media screen and (min-width:768px) {
+  .footer {
+    display: grid;
+    height: 689px;
+    column-gap: 2.6vw;
+    grid-template-columns: repeat(6, 13.02vw);
+    grid-template-rows: auto auto;
+    justify-content: center;
+    padding: 0;
+    margin: 51px 0;
+
+    color: #0f0e08;
+
+    &__links {
+      grid-row: 1/2;
+      grid-column: 1/2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__socials {
+      width: 61.5px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 50px;
+    }
+
+    &__timtable {
+      grid-row: 1/2;
+      grid-column: 2/4;
+    }
+
+    &__section-header {
+      margin: 0 0 20px;
+
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.82vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 2.56vw;
+      text-align: left;
+    }
+
+    &__timtable-list {
+      list-style: none;
+    }
+
+    &__timtable-item {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.82vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 2.73vw;
+      text-align: left;
+
+      &--bold {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 1.82vw;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 2.73vw;
+        text-align: left;
+      }
+    }
+
+    &__contacts {
+      grid-row: 1/2;
+      grid-column: 4/6;
+    }
+
+    &__text {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.82vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 2.73vw;
+      text-align: left;
+
+      margin-bottom: 46px;
+    }
+
+    &__nav {
+      grid-row: 3/4;
+      grid-column: 2/6;
+
+      padding-top: 51px;
+
+      &::before {
+        display: block;
+        content: "";
+        border-bottom: 0.13vw solid rgba(26, 90, 76, 0.5);
+        position: relative;
+        top: -51px;
+      }
+    }
+
+    &__nav-list {
+      list-style: none;
+
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-self: start;
+      max-width: 52.9vw;
+
+      height: 15.1vw + 2.6vw * 3;
+    }
+
+    &__nav-item {
+      padding: 0;
+      max-width: 29vw;
+    }
+
+    &__nav-link {
+      display: block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.82vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.82vw;
+      text-align: left;
+      color: #0f0e08;
+
+      padding: 1.5vw 1vw 1.5vw 0;
+    }
+  }
+}
