footer 1280px syles were created

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -239,3 +239,138 @@
     }
   }
 }
+
+@media screen and (min-width:1280px) {
+  .footer {
+    display: grid;
+    height: 457px;
+    column-gap: 5.5vw;
+    grid-template-columns: 70px 12.48vw 13.81vw 37vw;
+    grid-template-rows: auto;
+    justify-content: space-between;
+    padding: 0;
+    margin: 51px 4.3vw;
+
+    color: #0f0e08;
+
+    &__links {
+      grid-row: 1/2;
+      grid-column: 1/2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__socials {
+      width: 61.5px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 50px;
+    }
+
+    &__timtable {
+      grid-row: 1/2;
+      grid-column: 2/3;
+    }
+
+    &__section-header {
+      margin: 0 0 20px;
+
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.09vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.54vw;
+      text-align: left;
+    }
+
+    &__timtable-list {
+      list-style: none;
+    }
+
+    &__timtable-item {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.09vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.64vw;
+      text-align: left;
+
+      &--bold {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 1.09vw;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 1.64vw;
+        text-align: left;
+      }
+    }
+
+    &__contacts {
+      grid-row: 1/2;
+      grid-column: 3/4;
+      &::after {
+        content: "";
+        display: block;
+        width: 0.08vw;
+        height: 20.31vw;
+        background-color: rgba(26, 90, 76, 0.5);
+        transform: translate(15.6vw, -14.37vw);
+      }
+    }
+
+    &__text {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.09vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      text-align: left;
+
+      margin-bottom: 46px;
+    }
+
+    &__nav {
+      grid-row: 1/2;
+      grid-column: 4/5;
+
+      padding-top: 0;
+
+      &::before {
+        display: none;
+      }
+    }
+
+    &__nav-list {
+      list-style: none;
+
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-self: start;
+      max-width: 52.9vw;
+
+      height: 13.74vw;
+    }
+
+    &__nav-item {
+      padding: 0;
+      max-width: 29vw;
+    }
+
+    &__nav-link {
+      display: block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 1.09vw;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%;
+      text-align: left;
+      color: #0f0e08;
+
+      padding: 0.3vw 1vw 1.4vw 0;
+    }
+  }
+}
