footer for large desctops was created

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -34,11 +34,11 @@
     text-align: left;
   }
 
-  &__timtable-list {
+  &__timetable-list {
     list-style: none;
   }
 
-  &__timtable-item {
+  &__timetable-item {
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 4.37vw;
     font-style: normal;
@@ -139,7 +139,7 @@
       margin-top: 50px;
     }
 
-    &__timtable {
+    &__timetable {
       grid-row: 1/2;
       grid-column: 2/4;
     }
@@ -155,11 +155,11 @@
       text-align: left;
     }
 
-    &__timtable-list {
+    &__timetable-list {
       list-style: none;
     }
 
-    &__timtable-item {
+    &__timetable-item {
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 1.82vw;
       font-style: normal;
@@ -270,7 +270,7 @@
       margin-top: 50px;
     }
 
-    &__timtable {
+    &__timetable {
       grid-row: 1/2;
       grid-column: 2/3;
     }
@@ -279,20 +279,20 @@
       margin: 0 0 20px;
 
       font-family: "IBM Plex Sans", sans-serif;
-      font-size: 1.09vw;
+      font-size: 1.64vw;
       font-style: normal;
       font-weight: 400;
       line-height: 1.54vw;
       text-align: left;
     }
 
-    &__timtable-list {
+    &__timetable-list {
       list-style: none;
     }
 
-    &__timtable-item {
+    &__timetable-item {
       font-family: "IBM Plex Sans", sans-serif;
-      font-size: 1.09vw;
+      font-size: 21px;
       font-style: normal;
       font-weight: 400;
       line-height: 1.64vw;
@@ -300,7 +300,7 @@
 
       &--bold {
         font-family: "IBM Plex Sans", sans-serif;
-        font-size: 1.09vw;
+        font-size: 1.64vw;
         font-style: normal;
         font-weight: 600;
         line-height: 1.64vw;
@@ -323,7 +323,7 @@
 
     &__text {
       font-family: "IBM Plex Sans", sans-serif;
-      font-size: 1.09vw;
+      font-size: 1.64vw;
       font-style: normal;
       font-weight: 400;
       line-height: 150%;
@@ -363,7 +363,7 @@
     &__nav-link {
       display: block;
       font-family: "IBM Plex Sans", sans-serif;
-      font-size: 1.09vw;
+      font-size: 21px;
       font-style: normal;
       font-weight: 400;
       line-height: 100%;
@@ -371,6 +371,142 @@
       color: #0f0e08;
 
       padding: 0.3vw 1vw 1.4vw 0;
+    }
+  }
+}
+
+@media screen and (min-width:1920px) {
+  .footer {
+    max-width: 1920px;
+    display: grid;
+    height: 457px;
+    column-gap: 30px;
+    grid-template-columns: repeat(16, 70px);
+    grid-template-rows: auto;
+    justify-content: center;
+    padding: 0;
+    margin: 51px auto;
+
+    color: #0f0e08;
+
+    &__links {
+      grid-row: 1/2;
+      grid-column: 1/2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__socials {
+      width: 61.5px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 50px;
+    }
+
+    &__timetable {
+      grid-column: 3/5;
+      grid-row: 1/2;
+    }
+
+    &__section-header {
+      margin: 0 0 20px;
+
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 19.69px;
+      text-align: left;
+    }
+
+    &__timetable-list {
+      list-style: none;
+    }
+
+    &__timetable-item {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 21px;
+      text-align: left;
+
+      &--bold {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 21px;
+        text-align: left;
+      }
+    }
+
+    &__contacts {
+      grid-row: 1/2;
+      grid-column: 6/8;
+      &::after {
+        content: "";
+        display: block;
+        width: 1px;
+        height: 260px;
+        background-color: rgba(26, 90, 76, 0.5);
+        transform: translate(300px, -205.8px);
+      }
+    }
+
+    &__text {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      text-align: left;
+
+      margin-bottom: 46px;
+    }
+
+    &__nav {
+      grid-row: 1/2;
+      grid-column: 10/14;
+
+      padding-top: 0;
+
+      &::before {
+        display: none;
+      }
+    }
+
+    &__nav-list {
+      list-style: none;
+
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-self: start;
+      max-width: 52.9vw;
+
+      height: 50px + 88px;
+    }
+
+    &__nav-item {
+      padding: 0;
+      max-width: 29vw;
+    }
+
+    &__nav-link {
+      display: block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%;
+      text-align: left;
+      color: #0f0e08;
+
+      padding: 10px 10px 10px 0;
     }
   }
 }
