--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "reset";
+@import "container";
 
-body {
-  background: $c-gray;
-}
+@import "header";
+
+@import "nav";
+@import "side-link";
+
+@import "content";
+@import "events";
+@import "event";
+@import "lecture";
+@import "gallery";
+@import "subscribe";
+
+@import "footer";
