--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -4,20 +4,29 @@
   }
 }
 
+
+
 .gallery {
 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  max-width: 1570px;
-  height: 990px;
+  &__title {
+    margin-bottom: 60px;
+  }
 
   // margin: 0 auto;
 
+  &__grid {
+    display: grid;
+    grid-template-rows: 600px 360px;
+    grid-template-columns: repeat(3, 370px);
+    gap: 30px;
+
+    // max-width: 1570px;
+    // height: 990px;
+  }
+
   &__item {
     display: inline-block;
-    
+
     width: 370px;
     height: 600px;
 
