--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,6 +1,9 @@
 .event {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
+  width: 1370px;
 
   & + :nth-child(1) {
     margin-right: 130px;
