--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,8 +1,7 @@
 .container {
-  padding-top: 15px;
+  padding: 15px 55px;
   margin: 0 auto;
 
-  max-width: 1570px;
+  max-width: 1280px;
 
-  // border: 1px solid red;
 }
