--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 1370px;
+  width: 100%;
 
   & + :nth-child(1) {
     margin-right: 130px;
