--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -4,17 +4,17 @@
     background-repeat: no-repeat;
     background-size: contain;
 
-    &::before {
-      content: "#{$i}";
-      // position: absolute;
-      // z-index: 2;
-      // top: 50%;
-      // left: 50%;
+    // &::before {
+    //   content: "#{$i}";
+    //   // position: absolute;
+    //   // z-index: 2;
+    //   // top: 50%;
+    //   // left: 50%;
 
-      font-size: 36px;
-      color: lime;
+    //   font-size: 36px;
+    //   color: lime;
 
-    }
+    // }
   }
 
 }
@@ -43,18 +43,20 @@
     &--3,
     &--6 {
       display: none;
+
+      @media (min-width: $full-HD) {
+        display: block;
+      }
     }
 
-    &--wide {
-      &-first {
-        grid-column-start: 2;
-        grid-column-end: 4;
-      }
+    &--wide-first {
+      grid-column-start: 2;
+      grid-column-end: 4;
+    }
 
-      &-second {
-        grid-column-start: 1;
-        grid-column-end: 3;
-      }
+    &--wide-second {
+      grid-column-start: 1;
+      grid-column-end: 3;
     }
   }
 }
