--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -24,7 +24,9 @@
   }
 
   &__form {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+
   }
 
   &__input {
@@ -43,10 +45,29 @@
   }
 
   &__button {
+    position: relative;
+    z-index: 1;
+
+    padding: 29px 30px;
+
     width: 70px;
     height: 70px;
 
     background-color: $color-orange;
     border: none;
+
+    background-image: url($img-arrow);
+    background-size: 8px;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
   }
 }
