--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,11 +1,91 @@
 .footer {
+
   &__top {
+
+    margin-bottom: 84px;
+
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+  }
+
+  // &__links {
+
+  // }
+
+  &__logo {
+    margin-bottom: 62px;
+  }
+
+  &__soc-links {
+    * {
+      padding: 5px;
+
+      transition: 0.3s;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+
+    & :nth-child(1) {
+      padding-left: 0;
+      margin-right: 5px;
+    }
+  }
+
+  // &__schedule {
+
+  // }
+
+  &__title {
+    margin-bottom: 20px;
+  }
+
+  &__schedule-description {
+    margin-bottom: 20px;
+  }
+
+  &__contacts-link {
+    color: $color-black-text;
+    &:hover {
+      color: $color-orange;
+    }
+  }
+
+  &__nav {
+    border-left: 1px solid rgba(26, 90, 76, 0.5);
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 0 0;
+
+    list-style-type: none;
+  }
+
+  // &__list-item {
+  // }
+
+  &__nav-link {
+    display: inline-block;
+    padding: 10px 15px;
+
+    text-decoration: none;
+    color: $color-black-text;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+
+    &:hover {
+      color: $color-orange;
+    }
   }
 
   &__bottom {
     display: flex;
     justify-content: space-between;
+
+    margin-bottom: 20px;
   }
 }
