made skeleton of header, made block actual, made sceleton of block lecture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "normalize";
 
-body {
-  background: $c-gray;
+@import "header";
+@import "nav";
+@import "actual";
+
+.body__main {
+  max-width: 1570px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.main {
+  &__actual {
+    margin: 0 auto;
+  }
 }
