--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,29 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin mainText {
+  font-family: Montserrat, sans-serif;
+}
+
+@mixin secondaryText {
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+@mixin actual-media-img {
+  @media (max-width: 1440px) {
+    width: 670px;
+    height: 520px;
+    object-fit: cover;
+  }
+
+  @media (max-width: 768px) {
+    justify-self: center;
+    margin-bottom: 30px;
+  }
+
+  @media (max-width: 480px) {
+    width: 280px;
+    height: 210px;
+  }
+}
