--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+// $pageWidth: 1210px;
+
+$marginBetween: 200px;
+
+$mainGreen: #1a5a4c;
+$dark: #0f0e08;
+$grey: #4e4e4e;
+
+$transDuration: 0.3s;
