--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,7 +1,12 @@
 .container {
-  padding: 15px 55px;
+  padding: $desctop-padding;
   margin: 0 auto;
 
-  max-width: 1280px;
+  max-width: $min-desctop-width;
 
+  @media (max-width: $min-desctop-width) {
+    padding: $tablet-padding;
+
+    max-width: $min-tablet-width;
+  }
 }
