--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,14 +1,24 @@
 .content {
   &__events {
     margin-bottom: 100px;
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 90px;
+    }
   }
 
   &__lecture {
     margin-bottom: 200px;
+
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 90px;
+    }
   }
 
   &__gallery {
     margin-bottom: 200px;
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 130px;
+    }
   }
 
   &__subscribe {
