--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -5,13 +5,15 @@
 
   width: 100%;
 
-  & + :nth-child(1) {
-    margin-right: 130px;
-  }
-
   &__img {
     width: 670px;
     height: 520px;
+
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 30px;
+
+      width: 100%;
+    }
   }
 
   &__info {
@@ -19,9 +21,11 @@
   }
 
   &__details {
-    margin-bottom: 32px;
     display: flex;
     align-items: center;
+
+    margin-bottom: 32px;
+
   }
 
   &__type {
