--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -6,8 +6,19 @@
 
   &__event {
     margin-bottom: 100px;
+
     &:nth-child(even) {
       flex-flow: row-reverse;
+
+      @media (max-width: $min-desctop-width) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
+
+    @media (max-width: $min-desctop-width) {
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 }
