--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,6 +6,12 @@
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 2fr;
+
+    @media (max-width: $min-desctop-width) {
+      grid-template-rows: 296px 1fr;
+      grid-template-columns: 1fr 2fr 2fr;
+      gap: 0 50px;
+    }
   }
 
   // &__links {
@@ -45,6 +51,12 @@
     margin-bottom: 20px;
   }
 
+  &__schedule-detailed-description {
+    @media (max-width: $min-desctop-width) {
+      // margin-bottom: 46px;
+    }
+  }
+
   &__contacts-link {
     color: $color-black-text;
     &:hover {
@@ -54,15 +66,31 @@
 
   &__nav {
     border-left: 1px solid rgba(26, 90, 76, 0.5);
+
+    @media (max-width: $min-desctop-width) {
+      grid-column-start: 2;
+      grid-column-end: 4;
+
+      padding-top: 50px;
+
+      border-left: none;
+      border-top: 1px solid rgba(26, 90, 76, 0.5);
+    }
   }
 
   &__list {
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 0 0;
 
     list-style-type: none;
+
+    @media (max-width: $min-desctop-width) {
+      padding-left: 0;
+    }
+
   }
 
   // &__list-item {
