--- a/src/styles/gallery-item.scss
+++ b/src/styles/gallery-item.scss
@@ -29,7 +29,9 @@
     text-align: center;
   }
 
-  &:hover &__info {
-    display: block;
+  @media (min-width: $min-desctop-width) {
+    &:hover &__info {
+      display: block;
+    }
   }
 }
