--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,8 +3,16 @@
 
   height: 655px;
 
+  @media (max-width: $min-desctop-width) {
+    margin-bottom: 90px;
+
+    height: 384px;
+  }
+
   &__container {
     position: relative;
+
+    padding-top: 15px;
   }
 
   &__top {
@@ -13,6 +21,7 @@
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
   }
 
   &__toggler {
@@ -66,6 +75,10 @@
 
     margin-left: 187px;
 
+    @media (max-width: $min-desctop-width) {
+      margin-left: 0;
+    }
+
   }
 
   &__background {
@@ -82,14 +95,22 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    // @media (min-width: 1200px) {
-    // }
+    @media (max-width: $min-desctop-width) {
+      left: 262px;
+
+      height: 384px;
+    }
   }
 
   &__title {
 
     margin-top: 148px;
     margin-bottom: 80px;
+
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 40px;
+      margin-top: 78px;
+    }
   }
 
   &__title-stroke {
@@ -155,6 +176,7 @@
       background-repeat: no-repeat;
       background-size: contain;
     }
+
   }
 
   &__side-link {
@@ -162,5 +184,9 @@
     left: -48px;
     bottom: 46px;
     transform: rotate(-90deg);
+
+    @media (max-width: $min-desctop-width) {
+      display: none;
+    }
   }
 }
