--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -13,6 +13,10 @@ h1 { /*ХУДОЖНІЙ МУЗЕЙ*/
   font-size: 72px;
   line-height: 100%;
   color: #000;
+
+  @media (max-width: $min-desctop-width) {
+    font-size: 55px;
+  }
 }
 
 h2 { /*Актуальні події*/
