--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -34,8 +34,11 @@ $img-ig: "/images/ig.svg";
 
 $img-arrow: "/images/arrow.svg";
 
+$min-desctop-width: 1280px;
+$desctop-padding: 0 58px;
+
 $min-tablet-width: 768px;
-$tablet-padding: 34px;
+$tablet-padding: 0 34px;
 
 $min-mobile-width: 320px;
 $mobile-padding: 20px;
