Fixed margin between events

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -7,6 +7,10 @@
   &__event {
     margin-bottom: 100px;
 
+    @media (max-width: $min-desctop-width) {
+      margin-bottom: 50px;
+    }
+
     &:nth-child(even) {
       flex-flow: row-reverse;
 
