--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,6 +3,7 @@
     padding-left: 20px;
     max-width: 1920px;
     margin: 0 auto;
+    overflow: hidden;
   }
 
   &__position {
@@ -207,6 +208,7 @@
 
     &__content {
       padding: 0;
+      height: 510px;
     }
 
     &__position {
