--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,9 @@
 @import "resets";
 @import "header";
 @import "nav";
+@import "section";
+@import "gallery";
+@import "fon";
 
 body {
   background: $c-gray;
