--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,76 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  color: #000;
+  text-transform: uppercase;
+  @include media(tablet) {
+    font-size: 55px;
+  }
+  @include media(dt) {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 100%;
+
+  @include media(tablet) {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 100%;
+
+  @include media(tablet) {
+    font-size: 36px;
+  }
+}
+
+%logo-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 100%;
+  color: $c-dark-text;
+
+  @include media(tablet) {
+    font-size: 36px;
+  }
+}
+
+%link-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
+%header-links {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+}
+
+%decor-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: $c-secondary-text;
+
+  @include media(dt) {
+    font-size: 14px;
+  }
 }
