--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$c-text: #4e4e4e;
+$c-dark-text: #0f0e08;
+$c-secondary-text: #687480;
+$c-accent-first: #1a5a4c;
+$c-accent-second: #f14a27;
