--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,39 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "logo";
+@import "header";
+@import "burger";
+@import "events";
+@import "event-card";
+@import "main-event";
+@import "gallery";
+@import "subscription";
+@import "footer";
 
+// DOESN'T WORK:
+html {
+  font-family: "Roboto", sans-serif;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template: minmax(655px, auto) 1fr minmax(457px, auto) / 1fr;
+  grid-template-areas: "header" "main" "footer";
+  justify-content: center;
+}
+
+.header {
+  grid-area: header;
+}
+
+.main {
+  grid-area: main;
+
+
+}
+
+.footer {
+  grid-area: footer;
+}
