--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -1,4 +1,9 @@
 .logo {
-  height: 72px;
-  width: 63px;
+  height: $logoHeight;
+  width: $logoWidth;
+  
+  @media (max-width: 760px) {
+    height: $logoHeightMob;
+    width: $logoWidthMob;
+  }
 }
