--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,15 +4,27 @@
 @import "_reset";
 @import "header";
 @import "menu";
+@import "logo";
 @import "nav";
+@import "container";
+@import "capital";
+@import "button";
+@import "events";
+@import "description";
+@import "lecture";
+
+* {
+  box-sizing: border-box;
+}
 
 html {
+  font-family: "IBM Plex Sans", sans-serif;
   background: #e5e5e5;
   scroll-behavior: smooth;
 }
 
 body {
-  background: transparent;
+  background-color: #fff;
   max-width: 1920px;
   margin: 0 auto;
 }
