--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -3,11 +3,20 @@
     display: grid;
     grid-template-columns: repeat(8, auto);
     gap: 50px;
+    white-space: nowrap;
 
-    // background-color: red;
+    @include MediumScreen {
+      gap: 40px;
+    }
+
+    @include MobileScreen {
+      display: flex;
+      gap: 20px;
+      flex-direction: column;
+    }
   }
-  // &__item{
 
+  // &__item{
   // }
   // &__link{
   // }
