--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,22 @@
+
 $c-gray: #eee;
 $c-pageBackground: #fff;
-$maxPageWidth: 1570px;
+$c-humburIcon: #000;
+$c-darkText: #0f0e08;
+$c-greyText: #4e4e4e;
+$c-lightGreyText: #687480;
+$c-textDate: #1a5a4c;
+$c-squareEvets: #f14a27;
+
+$maxPageWidth: 1920px;
+$maxWitdhPageCont: 1570px;
+$logoWidth: 63px;
+$logoHeight: 72px;
+$logoWidthMob: 53px;
+$logoHeightMob: 61px;
+$squareEvetsHeight: 15px;
+$squareEvetsHeightMob: 10px;
+$squareEvetsLine-height: 36px;
+$squareEvetsLine-heightMob: 28px;
+$lectureCardWidth: 570px;
+$lectureCardWidthMob: 278px;
